--- a/index.html
+++ b/index.html
@@ -125,13 +125,24 @@
 
   <!-- Mensajes de ánimo -->
   <div id="animo" class="seccion">
-    <h2>Mensajes de ánimo ✨</h2>
+    <h2>Mensajes de ánimo ✨</h2> 
     <ul>
-      <li>🌟 Eres suficiente, exactamente como eres.</li>
-      <li>💜 No estás sola, aquí estoy contigo.</li>
-      <li>🌈 Todo va a mejorar, poco a poco, paso a paso.</li>
-      <li>🌻 Hoy es difícil, pero el sol siempre regresa.</li>
-    </ul>
+    <li>🌟 Eres una persona increíble, llena de luz y belleza.</li>
+    <li>💜 Tu inteligencia brilla en todo lo que haces. Nunca dejes de aprender.</li>
+    <li>🌈 Siempre tienes un corazón lleno de bondad y compasión. Eres un ejemplo para todos.</li>
+    <li>🌻 Eres una amiga excepcional. Me siento afortunado de conocerte.</li>
+    <li>💪 Tienes una fuerza interior que te permite superar cualquier obstáculo.</li>
+    <li>⚽ Eres increíble en el fútbol, ¡tu talento es impresionante y siempre te destacas en la cancha!</li>
+    <li>🌷 Tu amabilidad es contagiosa. A todos nos haces sentir bien a tu alrededor.</li>
+    <li>💖 La forma en que cuidas a los demás demuestra lo buena persona que eres. ¡Eres única!</li>
+    <li>🌟 Tu esfuerzo y dedicación no pasan desapercibidos, siempre das lo mejor de ti.</li>
+    <li>🌺 Tienes una sonrisa que ilumina cualquier habitación. ¡Eres puro encanto!</li>
+    <li>🌈 Tu creatividad y pasión por lo que haces son inspiradoras. ¡Nunca dejes de seguir tus sueños!</li>
+    <li>💫 Cada día te vuelves más fuerte y más sabia. No hay límites para ti.</li>
+    <li>💜 Eres tan generosa y empática, una persona que siempre está dispuesta a ayudar a los demás.</li>
+    <li>🌟 Tu capacidad para hacer sentir bien a los demás es un regalo. Gracias por ser tú.</li>
+    <li>🌸 En la vida, no hay nada que no puedas lograr, porque tienes todo lo necesario para alcanzar tus sueños.</li>
+  </ul>
     <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
   </div>
 
