--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
   <header>
     <h1>Para ti, Ami 💌</h1>
     <div class="botones-inicio" id="menu">
-      <button class="boton" onclick="mostrarSeccion('carta')">Carta</button>
-      <button class="boton" onclick="mostrarSeccion('video')">Para ti</button>
-      <button class="boton" onclick="mostrarSeccion('poema')">Un poema</button>
-      <button class="boton" onclick="mostrarSeccion('animo')">Mensajes de ánimo</button>
+      <button class="boton" onclick="mostrarSeccion('carta')">Una carta para ti</button>
+      <button class="boton" onclick="mostrarSeccion('video')">Una cancion para ti</button>
+      <button class="boton" onclick="mostrarSeccion('poema')">Un poema para ti</button>
+      <button class="boton" onclick="mostrarSeccion('animo')">Algunas cosas de ti</button>
     </div>
   </header>
 
@@ -89,21 +89,36 @@
   <div id="carta" class="seccion">
     <h2>Una carta para ti 💖</h2>
     <p>
-      Ami, no sé exactamente por lo que estás pasando, pero quiero que sepas que no estás sola.  
-      A veces la vida nos pone pruebas muy difíciles, pero también nos da personas que están dispuestas a caminar a tu lado,  
-      incluso si no saben a dónde vas. Y yo quiero ser una de esas personas para ti.  
-      No necesitas explicarme nada, solo quiero que sepas que aquí estoy, para escucharte, apoyarte o simplemente hacerte compañía en silencio.  
-      Me importa mucho tu bienestar, y aunque no siempre pueda estar cerca, siempre estaré disponible para ti.  
-      Siempre tienes en mí un apoyo incondicional.  
-      Te aprecio más de lo que las palabras pueden expresar, y quiero que nunca olvides lo valiosa que eres.
+      Querida Ami,<br/>
+
+Sé que a veces la vida nos pone en situaciones que no entendemos del todo, y en este momento, <br/>
+aunque no sé exactamente por lo que estás pasando, quiero que sepas algo muy importante: no estás sola.<br/> 
+A veces, el camino se vuelve incierto y lleno de obstáculos, pero lo que realmente importa es que siempre <br/>
+habrá alguien dispuesto a estar a tu lado, sin importar cuán difíciles sean las circunstancias.<br/>
+      
+Yo quiero ser esa persona para ti. No necesitas explicarme todo lo que sientes ni contarme cada detalle. <br/>
+Lo único que deseo es que sepas que estoy aquí, dispuesto a escucharte, apoyarte y, si es necesario, simplemente <br/>
+estar a tu lado en silencio. La amistad es eso: estar allí para el otro, incluso cuando las palabras no son necesarias.<br/>
+La vida puede ser compleja, y muchas veces, cuando estamos atravesando momentos difíciles, nos sentimos perdidos. <br/>
+Pero quiero que confíes en que eres más fuerte de lo que crees, y que tienes todo lo necesario para superar cualquier<br/>
+prueba que se te presente. No estás sola en esto, y si alguna vez sientes que no puedes más, aquí estaré para ayudarte <br/>
+a seguir adelante.<br/>
+
+A veces, lo que más necesitamos es el apoyo incondicional de las personas que nos quieren. Y yo quiero ser esa persona para ti,<br/>
+sin importar la distancia ni los obstáculos que puedan surgir. Si alguna vez sientes que te falta fuerzas, recuerda que siempre <br/>
+podrás contar conmigo para lo que necesites.<br/>
+Te quiero mucho, Ami, y siempre estaré a tu lado, hoy y siempre.<br/>
+
+Con cariño,<br/>
+Alex
     </p>
     <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
   </div>
 
   <!-- Video -->
   <div id="video" class="seccion">
-    <h2>Un pequeño detalle 🎥</h2>
-    <p>Este video es solo para ti, ojalá te saque una sonrisa 💜</p>
+    <h2>Espero que te guste🎥</h2>
+    <p>Esta canción siempre me recuerda a ti 💜</p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Q3mTEVYaz1w" frameborder="0" allowfullscreen></iframe>
     <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
   </div>
@@ -119,6 +134,15 @@
       <br/>
       Porque eres más fuerte de lo que crees,<br/>
       y más querida de lo que imaginas.
+    </p>
+      <h2>Poema de Ralph Waldo Emerson - "No te detengas" 🌷</h2>
+    <p>
+      No te detengas, no te rindas,<br/>
+      Aunque el camino se vuelva difícil.<br/>
+      El sol siempre regresa después de la tormenta,<br/>
+      Y todo pasará, solo sigue adelante.<br/>
+      <br/>
+      TE QUIERO<br/>
     </p>
     <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
   </div>
