--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <button class="boton" onclick="mostrarSeccion('video')">Una cancion para ti</button>
       <button class="boton" onclick="mostrarSeccion('poema')">Un poema para ti</button>
       <button class="boton" onclick="mostrarSeccion('animo')">Algunas cosas de ti</button>
+      <button class="boton" onclick="mostrarSeccion('admiro')">Cosas que admiro de ti</button>
     </div>
   </header>
 
@@ -169,6 +170,22 @@ Alex
   </ul>
     <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
   </div>
+  <div id="admiro" class="seccion">
+  <h2>Cosas que admiro de ti 💜</h2>
+  <ul>
+    <li>✨ Tu forma de ver la vida, incluso en los momentos más difíciles.</li>
+    <li>⚽ Lo increíble que eres jugando fútbol, ¡de verdad te luces!</li>
+    <li>💫 Lo inteligente que eres, siempre encontrando la manera de salir adelante.</li>
+    <li>🌷 Tu amabilidad y lo mucho que te preocupas por los demás.</li>
+    <li>🌈 Tu capacidad de hacer sentir bien a quienes te rodean.</li>
+    <li>🧠 Tu mente brillante, llena de ideas, preguntas y fuerza.</li>
+    <li>😄 Tu risa, que tiene ese no sé qué que alegra todo.</li>
+    <li>💪 Tu valentía, incluso cuando no lo notas.</li>
+    <li>🌟 El hecho de que nunca dejas de intentar, aunque tengas miedo.</li>
+    <li>💖 Que seas tú… y que no necesitas ser nadie más.</li>
+  </ul>
+  <button class="boton volver" onclick="volverInicio()">Volver al inicio</button>
+</div>
 
   <script>
     function mostrarSeccion(id) {
